[package]
name = "muc"
version = "0.1.0"
authors = ["Wangshan Lu <wisagan@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/WiSaGaN/muc.git"
description = """
A program that tests UDP multicast data
"""
keywords = ["multicast"]


[dependencies]
net2 = "0.2"
